--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
+# Interface Gráfica
+dash~=2.17.1
+dash_bootstrap_components~=1.6.0
+
+# Bibliotecas Gerais
 pandas~=1.5.3
 numpy~=1.26.4
-pyGCS~=1.1.1
-opencv-python~=4.10.0.84
-pillow~=10.3.0
-dash~=2.17.1
 matplotlib~=3.8.4
+plotly~=5.22.0
+pillow~=10.3.0
+
+#Leitura e Gravação Excel
+XlsxWriter~=3.2.0
+openpyxl~=3.1.5
+
+# GCI
+pyGCS~=1.1.1
+
+# IA e ML
+opencv-python~=4.10.0.84
 scipy~=1.11.4
 scikit-learn~=1.4.2
-plotly~=5.22.0
 scikit-image~=0.24.0
+
